--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ a:hover {
         
         </strong>
           <h1 class="text-center"></h1>        </th>
-      <th width="300" align="right">   <img src="images/Systech_Logo_FullColor.jpg" alt="Systech Logo"  align="right" width="300"/>  </th>
+      <th width="300" align="right">   <img src="images/Systech_Logo_FullColor.jpg" alt="Systech Logo"  align="right" width="300"/>  
+</th>
       </tr>
     </tbody>
   </table>
