--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover {
         <th width="65" scope="col"><img src="images/Orange-Carrot.png " align="right" width="62" height="187" alt=""/></th>
         <th width="650" align="right" scope="col"><img src="images/SYS_UniSecure.jpg" alt="UniSecure Logo" width="160"><strong>UniScan Mobile App<br>
 
-        <span style="font-size: medium" class="text-right">Design Reference App (Beta Versions)</span><img src="../../OneDrive for Business/Shared with Everyone/e-Fingerprint/_HTML/images/Orange-Carrot.png" width="62" height="187" alt=""/>
+        <span style="font-size: medium" class="text-right">Design Reference App (Beta Versions)</span><img src="images/Orange-Carrot.png" width="62" height="187" alt=""/>
         
         
         </strong>
