--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ a:hover {
         <th width="65" scope="col"><img src="images/Orange-Carrot.png " align="right" width="62" height="187" alt=""/></th>
         <th width="650" align="right" scope="col"><img src="images/SYS_UniSecure.jpg" alt="UniSecure Logo" width="160"><strong>UniScan Mobile App<br>
 
-        <span style="font-size: medium" class="text-right">Design Reference App (Beta Versions)</span><img src="images/Orange-Carrot.png" width="62" height="187" alt=""/>
+        <span style="font-size: medium" class="text-right">  &nbsp; &nbsp;Design Reference App (Beta Versions)</span>
         
         
         </strong>
         <h1 class="text-center"></h1>        </th>
-      <th width="300" align="right">   <img src="images/Systech_Logo_FullColor.jpg" alt="Systech Logo"  align="right" width="300"/>  
+      <th width="300" align="right">   <img src="images/Systech_Logo_FullColorTagline.png" alt="Systech Logo"  align="right" width="330"/>  
 </th>
       </tr>
     </tbody>
@@ -48,18 +48,18 @@ a:hover {
   <hr>
 <div class="container">
 All versions displayed on this screen are for INTERNAL USE ONLY and not to be shared with customers
-<table width="1000" border="1" cellpadding="50" cellspacing="1" bordercolor="#7FBA00">
+<table width="1000" border="1" cellpadding="1" cellspacing="1" bordercolor="#7FBA00">
   <tbody style="">
           <tr style="font-size: medium">
-            <th width="10%">Date</th>
-            <th width="9%">Build</th>
-            <th width="81%">Description</th>
+            <th width="10%" bgcolor="#D8D8D8">Date</th>
+            <th width="9%" bgcolor="#D8D8D8">Build</th>
+            <th width="81%" bgcolor="#D8D8D8">Description</th>
           </tr>
           <tr style="font-size: small">
-            <td valign="top">06/22/2015</td>
+            <td valign="top" padding= >06/22/2015</td>
             <td valign="top">1.6.0</td>
-            <td>Custom: Non-Serialized Beta<br>
-              <a href="assets/UniScan_v1.6.0.ipa">Install UniScan v1.6.0 Build<br>
+            <td >Custom: Non-Serialized Beta<br>
+              <a href="assets/UniScan_v1.6.0.ipa" title="Install UniSign Mobile App" target="new">Install UniScan v1.6.0 Build<br>
             </a> <a href="assets/IG-001(UniScanInstallation)_Manual.pdf">UniScan Installation Instructions IG-001</a><br></td>
       </tr>
   </tbody>
@@ -68,7 +68,7 @@ All versions displayed on this screen are for INTERNAL USE ONLY and not to be sh
 <hr>
   <div class="row">
     <div class="text-center col-md-12">
-      <div class="well"><strong> For  UniSecure questions contact Candice Cassella.</strong></div>
+      <div class="well"><strong> For  UniSecure questions contact <a href="mailto:Candice.Cassella@SystechOne.com">Candice.Cassella@SystechOne.com</a> or <a href="mailto:jim.sinisgalli@SystechOne.com">Jim.Sinisgalli@SystechOne.com</a>.</strong></div>
     </div>
   </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
