--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ a:hover {
 </head>
 <body link="#3A5DAE" vlink="#7FBA00" alink="#ff9e1b">
 <div class="container-fluid">
-  <table width="1235" border="0" cellpadding="10">
+  <table width="1085" border="0" cellpadding="10">
     <tbody>
-      <tr height="187">
+      <tr>
         <th width="25" scope="col"><img src="images/Orange-Carrot.png " align="right" width="62" height="187" alt=""/></th>
-        <th width="650" align="right" scope="col"><strong>UniSecure&#8482;<br>
+        <th width="500" align="right" scope="col"><strong>UniSecure&#8482;<br>
           UniScan&#8482; Mobile App<br>
         <span style="font-size: medium" class="text-right">Design Reference App (Beta Versions)</span> </strong> 
         </th>
@@ -50,8 +50,10 @@ a:hover {
   </div>
   <hr>
 <div class="container">
-All versions displayed on this screen are for INTERNAL USE ONLY and not to be shared with customers
-<table width="1000" border="1" cellpadding="10" cellspacing="1" bordercolor="#7FBA00">
+        <p>
+          All versions displayed on this screen are for INTERNAL USE ONLY and not to be shared with customers
+        </p>
+  <table width="800" border="1" align="right" cellpadding="8" cellspacing="1" bordercolor="#7FBA00">
   <tbody style="">
           <tr style="font-size: medium">
             <th width="10%" bgcolor="#D8D8D8">Date</th>
@@ -69,8 +71,8 @@ All versions displayed on this screen are for INTERNAL USE ONLY and not to be sh
 </table>
     </div>
 <hr>
-  <div class="row" width="1275" >
-    <div class="text-center col-md-12">
+  <div class="row" width="800" >
+    <div class="text-center col-md-8">
       <div class="well"><strong> For  UniSecure questions contact <br>
       <a href="mailto:Candice.Cassella@SystechOne.com">Candice.Cassella@SystechOne.com</a> or <a href="mailto:jim.sinisgalli@SystechOne.com">Jim.Sinisgalli@SystechOne.com</a>.</strong></div>
     </div>
