--- a/UniScanSettings.html
+++ b/UniScanSettings.html
@@ -32,9 +32,8 @@ a:hover {
       <tr>
         <th width="25" scope="col"><img src="images/Orange-Carrot.png " align="right" width="62" height="187" alt=""/></th>
         <th width="500" align="right" scope="col"><strong>UniSecure&#8482;<br>
-          UniScan&#8482; Mobile App<br>
-        <span style="font-size: medium" class="text-right">Design Reference App (Beta Versions)</span> </strong> 
-        </th>
+UniScan&#8482; Mobile App<br>
+<span style="font-size: medium" class="text-right">Non-Serialized Sales Demo &nbsp;(Beta Versions)</span></strong></th>
       <th width="275" valign="top">   
       
       <div style="width: 275px; height: 175px; overflow: hidden; float: left; border-collapse: collapse;">
@@ -49,32 +48,63 @@ a:hover {
 
   </div>
 <div class="container">
-        <p>
-          All versions displayed on this screen are for INTERNAL USE ONLY and not to be shared with customers
-        </p>
+  <p>The settings displayed below are for INTERNAL USE ONLY and not to be shared with customers.</p>
   <table width="800" border="1" align="right" cellpadding="8" cellspacing="1" bordercolor="#7FBA00">
   <tbody style="">
           <tr style="font-size: medium">
-            <th width="10%" bgcolor="#D8D8D8">Date</th>
-            <th width="9%" bgcolor="#D8D8D8">Build</th>
-            <th width="81%" bgcolor="#D8D8D8">Description</th>
+            <th width="20%" bgcolor="#D8D8D8">Property</th>
+            <th width="80%" bgcolor="#D8D8D8">Value</th>
           </tr>
           <tr style="font-size: medium">
-            <td valign="top">06/22/2015</td>
-            <td valign="top">1.6.0</td>
-            <td >Custom: Non-Serialized Beta<br>
-              <a href="assets/UniScan_v1.6.0.ipa" title="Install UniSign Mobile App" target="new">Install UniScan v1.6.0 Build<br>
-            </a> <a href="assets/IG-001(UniScanInstallation)_Manual.pdf">UniScan Installation Instructions IG-001</a><br></td>
+            <td valign="top">e-Mail </td>
+            <td>&lt;your email address&gt; </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Phone Number </td>
+            <td>&lt;your cell phone number&gt; </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Server URL </td>
+            <td>https://non-serialized-efp-dem.systechcitadel.com:446 </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Username </td>
+            <td>TBD </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Password </td>
+            <td>TBD </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Barcode Type </td>
+            <td>1D&nbsp;UPC</td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Barcode Size Class </td>
+            <td>B </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Sharpness </td>
+            <td>L </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Laser Ablation </td>
+            <td>Off </td>
+          </tr>
+          <tr style="font-size: medium">
+            <td valign="top">Flash On </td>
+            <td >On<br></td>
       </tr>
   </tbody>
 </table>
     </div>
 <hr>
-  <div class="row" width="800" >
 
+  <div class="row" width="800" >
     <div class="text-center col-md-8">
-  <br>
-        <div class="well"><strong> For  UniSecure questions contact <br>
+    <br>
+
+      <div class="well"><strong> For  UniSecure questions contact <br>
       <a href="mailto:Candice.Cassella@SystechOne.com">Candice.Cassella@SystechOne.com</a> or <a href="mailto:jim.sinisgalli@SystechOne.com">Jim.Sinisgalli@SystechOne.com</a>.</strong></div>
     </div>
   </div>
