--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ a:hover {
             <td valign="top">1.6.0</td>
             <td >Custom: Non-Serialized Beta<br>
               <a href="assets/UniScan_v1.6.0.ipa" title="Install UniSign Mobile App" target="new">Install UniScan v1.6.0 Build<br>
-            </a> <a href="assets/IG-001(UniScanInstallation)_Manual.pdf">UniScan Installation Instructions IG-001</a><br></td>
+              </a> <a href="assets/IG-001(UniScanInstallation)_Manual.pdf">UniScan Installation Instructions IG-001</a><br>
+            <a href="UniScanSettings.html"> UniScan Demo Settings</a><br></td>
       </tr>
   </tbody>
 </table>
