--- a/customers.html
+++ b/customers.html
@@ -61,9 +61,9 @@ a:hover {
             <td valign="top">06/22/2015</td>
             <td valign="top">1.6.0</td>
             <td >Custom: Non-Serialized Beta<br>
-              <a href="assets/UniScan_v1.6.0_customer.ipa" title="Install UniSign Mobile App" target="new">Install UniScan v1.6.0 Build<br>
-              </a> <a href="assets/IG-002(eFpUniScanEmailInstallation).pdf">UniScan Installation Instructions IG-002</a><br>
-            <a href="UniScanSettings.html"> UniScan Demo Settings</a><br></td>
+              <a href="http://unisecureplm.github.io/assets/UniScan_v1.6.0_customer.ipa" title="Install UniSign Mobile App" target="new">Install UniScan v1.6.0 Build<br>
+              </a> <a href="http://unisecureplm.github.io/assets/IG-002(eFpUniScanEmailInstallation).pdf">UniScan Installation Instructions IG-002</a><br>
+            <a href="http://unisecureplm.github.io/UniScanSettings.html"> UniScan Demo Settings</a><br></td>
       </tr>
   </tbody>
 </table>
